// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateNodeInput - simpleChain, the children nodes are not updated 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello World",
    },
  },
}
`;

exports[`updateNodeInput - singleNodeChain 1`] = `
{
  "n1": {
    "input": {
      "data": "Hello World",
    },
    "status": "idle",
  },
}
`;
